<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Real Estate Manager</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_estates_list">Estates list</string>
    <string name="menu_loan_simulator">Loan simulator</string>
    <string name="saved">saved</string>
    <string name="error_happened">error happened</string>
    <string name="textview">textview</string>
    <string name="menu_details">Details</string>
    <string name="menu_form">Form</string>
    <string name="menu_search">Search</string>
    <string name="media">Media</string>
    <string name="description">Description</string>
    <string name="content_description">content description</string>
    <string name="city">City</string>
    <string name="type">Type</string>
    <string name="main_picture">Main picture</string>
    <string name="price">Price</string>
    <string name="contact">Contact</string>
    <string name="sell_date_cannot_be_null">sell date cannot be null</string>
    <string name="minimal_words_lenght">city name lenght must be superior at 3 letters</string>
    <string name="estate_price_cannot_be_null">estate price cannot be null</string>
    <string name="surface_value_cannot_be_null">surface value cannot be null</string>
    <string name="rooms_value_cannot_be_null">rooms value cannot be null</string>
    <string name="contact_value_cannot_be_null">contact value cannot be null</string>
    <string name="Sell_date">Sell date</string>
    <string name="Is_it_sell">Is it Sell ?</string>
    <string name="Success">Success</string>
    <string name="Itemspdate">Item\'s successfully update</string>
    <string name="update_date_cannot_be_null">update date cannot be null</string>
    <string name="map">Map</string>
    <string name="your_ammount_mensuality_will_be">Your ammount mensuality will be</string>

    <string-array name="estate_type">
        <item>Loft</item>
        <item>House</item>
        <item>Duplex</item>
        <item>Field</item>
        <item>Store</item>
    </string-array>
</resources>